--- a/Unity/Unity.ModelView.csproj
+++ b/Unity/Unity.ModelView.csproj
@@ -50,9 +50,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Codes\ModelView\**\*.cs" />
-    <Reference Include="UnityEngine">
-      <HintPath>./Temp/bin/Debug/UnityEngine.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>./Temp/bin/Debug/UnityEngine.AIModule.dll</HintPath>
     </Reference>
@@ -598,6 +595,9 @@
       <Project>{d2ad5be1-263a-9a30-ab0f-dc5b08044350}</Project>
       <Name>Unity.ThirdParty</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="UnityEngine" Version="1.0.0" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
